fix: introducing cropper in session speaker form for speaker (#3819)
* introducing speaker-img-cropper Modal for speaker-form

Create speakerimg-cropper-modal.hbs

Create speakerimg-upload.js

Create speakerimg-upload.hbs

introducing image-cropper in session speaker form

Delete speakerimg-upload.js

Delete speakerimg-upload.hbs

Update image-upload.js

Update image-upload.hbs

Update session-speaker-form.hbs

Delete speakerimg-cropper-modal.js

Delete speakerimg-cropper-modal.hbs

observe route in cropper to set viewport height and width

Update image-upload.hbs

fix indentation in image-upload.js

Update image-upload.js

Update image-upload.hbs

removing `speakerImg`

fix travis build in cropper-modal.js

adding center cropper for speaker image

adding thumbnail class in speaker image

adding speakerImg in image-upload.js

adding speakerImg in image-upload.hbs

passing speakerImg prop in cropper-modal.js

set speakerImg to true in session-speaker-form

adding aspect ratio in cropper modal

Update cropper-modal.js

Update image-upload.js

setting aspectRatio as prop

aspect ration for session form

Update session-speaker-form.hbs

Update cropper-modal.js

Update app/components/forms/session-speaker-form.js


Update image-upload.js

reverting image-upload.hbs

Update session-speaker-form.js

Update app/styles/components/speaker-list.scss


reverting and using (array 2 2) for aspect ratio

fix build

Fix error: vendor prefixes should not be used

* Update speaker-list.scss

* Update speaker-item.hbs

* fix warning

* fix eslint warning

--- a/app/styles/components/speaker-list.scss
+++ b/app/styles/components/speaker-list.scss
@@ -13,3 +13,19 @@
 .word-break {
   overflow-wrap: break-word;
 }
+
+.thumbnail-square {
+  height: 220px;
+  overflow: hidden;
+  position: relative;
+  width: 220px;
+}
+
+.thumbnail-square img {
+  height: 100%;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: auto;
+}
